test/bad/functions/variadic03.px

func f(Char... c: "") def
    skip

f()
